force-app/main/default/objects/SBQQ__FavoriteProduct__c/fields/Fav_date__c.field-meta.xml
<CustomField>
    <fullName>Fav_date__c</fullName>
    <label>Fav date</label>
    <type>Date</type>
</CustomField>