force-app/main/default/objects/SBQQ__FavoriteProduct__c/fields/Fav_email__c.field-meta.xml
<CustomField>
    <fullName>Fav_email__c</fullName>
    <label>Fav email</label>
    <type>Email</type>
</CustomField>