force-app/main/default/objects/SBQQ__FavoriteProduct__c/fields/Fav_feedback__c.field-meta.xml
<CustomField>
    <fullName>Fav_feedback__c</fullName>
    <label>Fav feedback</label>
    <type>TextArea</type>
</CustomField>